# derive-divisible

./: Cargo.toml
examples/: full.rs  use.rs
src/: lib.rs
