[package]
name = "derive-divisible"
version = "0.1.0"
authors = ["frederic wagner <frederic.wagner@univ-grenoble-alpes.fr>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn ="^0.15.22"
# syn = { version = "^0.15.22", features = ["extra-traits"] } # use with for Debug
